...
    "Blood pressure": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Blutdruck"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Blood pressure"
...
